[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Entities/Items/Weapons/Ranged/RangedWeaponBody.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Test/WeaponTest.gd" type="Script" id=3]
[ext_resource path="res://src/Modes/Encounter/Tactical/EncounterCamera.gd" type="Script" id=4]
[ext_resource path="res://src/Modes/Encounter/Tactical/Map/TacticalMap/TacticalMap.tscn" type="PackedScene" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TacticalMap" parent="." instance=ExtResource( 5 )]
z_as_relative = false

[node name="GroundFloor" parent="TacticalMap" index="0"]
z_index = -3
z_as_relative = false

[node name="ObstacleMap" parent="TacticalMap/GroundFloor" index="1"]
tile_data = PoolIntArray( 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0 )

[node name="SpawnMap" parent="TacticalMap/GroundFloor" index="2"]
visible = false

[node name="RangedWeaponBody" parent="." instance=ExtResource( 1 )]
position = Vector2( 170, 8 )
rotation = 1.5708
z_index = 30

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 174, 137 )
current = true
zoom = Vector2( 0.75, 0.75 )
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="ShotsFired" type="Label" parent="Camera2D/CanvasLayer"]
margin_right = 91.0
margin_bottom = 14.0
text = "Shots Fired:"

[node name="GlobalHeightHits" type="Label" parent="Camera2D/CanvasLayer"]
margin_top = 16.0
margin_right = 91.0
margin_bottom = 30.0
text = "Global Height:"

[node name="HeightIntersectHits" type="Label" parent="Camera2D/CanvasLayer"]
margin_top = 32.0
margin_right = 115.0
margin_bottom = 46.0
text = "Height Intersects:"

[node name="Draw" type="Node2D" parent="."]
z_index = 30

[editable path="TacticalMap"]
[editable path="TacticalMap/GroundFloor"]
